force-app/main/default/objects/Distributor_Product_Alias__c/Distributor_Product_Alias__c.object-meta.xml
<CustomObject>
    <label>Distributor Product Alias</label>
    <nameField>
        <displayFormat>DIST-{00000}</displayFormat>
        <label>Distributor Product Alias Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Product Aliases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>