force-app/main/default/objects/Distributor_Product_Alias__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Product Aliases</relationshipLabel>
    <relationshipName>Product_Aliases</relationshipName>
    <type>Lookup</type>
</CustomField>