force-app/main/default/objects/Distributor_Product_Alias__c/fields/Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code__c</fullName>
    <description>Stable distributor key e.g. IBNSINA, Sofico</description>
    <label>Distributor Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>