force-app/main/default/objects/Distributor_Product_Alias__c/fields/Distributor_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Item_Code__c</fullName>
    <label>Distributor Item Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>