force-app/main/default/objects/Distributor_Product_Alias__c/fields/Distributor_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Item_Name__c</fullName>
    <label>Distributor Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>