force-app/main/default/objects/Distributor_Product_Alias__c/fields/Match_Method__c.field-meta.xml
<CustomField>
    <fullName>Match_Method__c</fullName>
    <label>Match Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seeded</fullName>
            </value>
            <value>
                <fullName>ExactCode</fullName>
            </value>
            <value>
                <fullName>FuzzyName</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>