force-app/main/default/objects/Distributor_Product_Alias__c/fields/Product2_Id__c.field-meta.xml
<CustomField>
    <fullName>Product2_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Distributor Product Aliases</relationshipLabel>
    <relationshipName>Distributor_Product_Aliases</relationshipName>
    <type>Lookup</type>
</CustomField>