force-app/main/default/objects/Distributor_Product_Alias__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Distributor_Code|Item_Code</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>