force-app/main/default/objects/Distributor_Product_Alias__c/fields/Zeta_Code__c.field-meta.xml
<CustomField>
    <fullName>Zeta_Code__c</fullName>
    <label>Zeta Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>